Fix - responsice CSS for alignwide

--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -132,8 +132,8 @@
 			.entry-content {
 
 				> .alignwide {
-					margin-left: -15px;
-					margin-right: -15px;
+					margin-left: -40px;
+					margin-right: -40px;
 				}
 			}
 		}
